Create image request form (#4)
* Tidy up login flow for GFX Suite website
* Allow prod users to interact with dev API
* Implement status check
* Create page to monitor requests queue
* Process receiptHandles correctly; return more detailed results
* Create separate pages for Home, Create, Browse, and Requests - make navigation dynamic based on page list
* Update create request form to queue prompt
* Create folder structure for localdata
* Recreate remote-crank using tsx; getOAuthToken using client credentials
* Add error handling around auth tokens
* Add timestamps to access token retrieval
* Create local storage clients for Requests and Results
* Create a refresh schedule
* Initialise polling for requests
* Fix handling of receiptHandle in delete message
* Create workflow and invoke against ComfyUI for each received request
* Update progress in README.md
* Start diagnosing return path for saved images
* Save outputs to local directory
* Start saving results; run batches as multiple individual generations
* Load existing requests if not processed by server
* Change image output folder
* Create endpoints to return user details
* Update post-deployment tests
* Add auth helper to control access based on groups
* Split groups on ','
* Add PUT /results endpoint to API
* Add GetResults endpoint; update post-deployment tests
* Update paths test
* Add post-deployment tests for store and retrieve results
* Make requestTime optional on originalRequest object
* Implement PNG to JPG image conversion
* Encrypt generated images using user's encryption key
* Reliably upload image results via FTP
* Store results at correct time
* Make FTP sync more reliable
* Ensure records are stored correctly; add write permission to service bucket
* Add additional debug to PutResults handler
* Load image results using stubbed id and date code; start to build Image Browser
* Decrypt images and display in browser
* Add status page
* Load results progressive
