# images-api/src/endpoints/PutRequest/handler.ts
@@ -2,6 +2,7 @@ import { APIGatewayProxyEvent, APIGatewayProxyResult } from 'aws-lambda'
 import { httpStatusCodes, lambdaResponse } from '../../helpers/Response'
 
 import Queues from '../helpers/queues'
+import { ImageRequestType } from '../../models/ApiResponseTypes'
 
 const queueUrl = process.env.REQUESTS_QUEUE_URL ?? 'no-queue-url-set'
 const requestsQueue = new Queues(queueUrl)
@@ -16,15 +17,18 @@ function parseEvent (body: string): any {
 
 /* This handler is executed by AWS Lambda when the endpoint is invoked */
 export async function handler (event: APIGatewayProxyEvent): Promise<APIGatewayProxyResult> {
+  const now = new Date()
   const rawRequest = parseEvent(event?.body ?? '{}')
-  const requestMessage = {
-    requestId: event?.pathParameters?.requestId,
+  const requestMessage: ImageRequestType = {
+    userId: event?.requestContext?.authorizer?.principalId ?? 'no-user-id-from-authorizer',
+    requestId: String(event?.pathParameters?.requestId),
     type: 'image-batch',
     positive: rawRequest?.positive,
     negative: rawRequest?.negative,
     width: rawRequest?.width,
     height: rawRequest?.height,
-    batchSize: rawRequest?.batchSize
+    batchSize: rawRequest?.batchSize,
+    requestTime: now.toISOString()
   }
 
   try {
