# images-api/src/tests/post-deployment/downloaded-app-openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Images API",
     "description": "Images API - https://github.com/connected-web/gfx-suite",
-    "version": "2024-07-06T10:05:52Z"
+    "version": "2024-07-15T11:20:26Z"
   },
   "servers": [
     {
@@ -11,6 +11,95 @@
     }
   ],
   "paths": {
+    "/user/{userId}": {
+      "get": {
+        "operationId": "userByUserId",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Content-Type": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserDetailsModel"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ImagesAPIImagesAPIPrivateApiRequestAuthorizerEC37AB56": []
+          }
+        ]
+      },
+      "options": {
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      }
+    },
     "/status": {
       "get": {
         "operationId": "getStatus",
@@ -80,7 +169,282 @@
         }
       }
     },
+    "/user/details": {
+      "get": {
+        "operationId": "userDetails",
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Content-Type": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserDetailsModel"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ImagesAPIImagesAPIPrivateApiRequestAuthorizerEC37AB56": []
+          }
+        ]
+      },
+      "options": {
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      }
+    },
+    "/results": {
+      "put": {
+        "operationId": "putResults",
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Content-Type": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PutResultsModel"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ImagesAPIImagesAPIPrivateApiRequestAuthorizerEC37AB56": []
+          }
+        ]
+      },
+      "options": {
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      }
+    },
     "/request": {
+      "options": {
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      }
+    },
+    "/results/{dateCode}/{requestId}": {
+      "get": {
+        "operationId": "getResults",
+        "parameters": [
+          {
+            "name": "dateCode",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "requestId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Content-Type": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetResultsModel"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ImagesAPIImagesAPIPrivateApiRequestAuthorizerEC37AB56": []
+          }
+        ]
+      },
+      "options": {
+        "parameters": [
+          {
+            "name": "dateCode",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "requestId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      }
+    },
+    "/user": {
       "options": {
         "responses": {
           "204": {
@@ -287,6 +651,48 @@
         }
       }
     },
+    "/results/{dateCode}": {
+      "options": {
+        "parameters": [
+          {
+            "name": "dateCode",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "204 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Credentials": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {}
+          }
+        }
+      }
+    },
     "/": {
       "options": {
         "responses": {
@@ -435,9 +841,13 @@
               ],
               "type": "object",
               "properties": {
+                "requestTime": {
+                  "type": "string",
+                  "description": "The time the request was received by the server in ISO format"
+                },
                 "negative": {
-                  "type": "array",
-                  "description": "The negative image labels"
+                  "type": "string",
+                  "description": "The negative image description"
                 },
                 "requestId": {
                   "type": "string",
@@ -455,9 +865,13 @@
                   "type": "string",
                   "description": "The unique identifier used to delete this message once handled"
                 },
+                "model": {
+                  "type": "string",
+                  "description": "The model to use for processing"
+                },
                 "positive": {
-                  "type": "array",
-                  "description": "The positive image labels"
+                  "type": "string",
+                  "description": "The positive image description"
                 },
                 "type": {
                   "type": "string",
@@ -465,7 +879,7 @@
                 },
                 "batchSize": {
                   "type": "integer",
-                  "description": "The number of images to process in a batch"
+                  "description": "The number of images to generate in a batch"
                 },
                 "height": {
                   "type": "integer",
@@ -477,6 +891,48 @@
           "message": {
             "type": "string",
             "description": "The message content describing the response"
+          }
+        }
+      },
+      "PutResultsModel": {
+        "title": "Put Results Response",
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "The message content describing the response"
+          }
+        }
+      },
+      "UserDetailsModel": {
+        "title": "User Details Response",
+        "required": [
+          "message",
+          "user"
+        ],
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "The message content describing the response"
+          },
+          "user": {
+            "required": [
+              "decryptionKey",
+              "userId"
+            ],
+            "type": "object",
+            "properties": {
+              "decryptionKey": {
+                "type": "string",
+                "description": "The user's decryption key for secure data storage"
+              },
+              "userId": {
+                "type": "string",
+                "description": "The unique identifier for the user"
+              }
+            },
+            "description": "The user details"
           }
         }
       },
@@ -494,6 +950,53 @@
         ],
         "type": "object",
         "properties": {
+          "message": {
+            "type": "string",
+            "description": "The message content describing the response"
+          },
+          "results": {
+            "type": "array",
+            "description": "The list of results for each message processed",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
+      "GetResultsModel": {
+        "title": "Get Results Response",
+        "type": "object",
+        "properties": {
+          "originalRequest": {
+            "type": "object",
+            "description": "The original request object"
+          },
+          "generatedFiles": {
+            "type": "array",
+            "description": "The list of paths of generated files",
+            "items": {
+              "type": "string"
+            }
+          },
+          "initializationVectors": {
+            "type": "array",
+            "description": "The corresponding initialization vectors used to encrypt and store the generated files",
+            "items": {
+              "type": "string"
+            }
+          },
+          "uploaded": {
+            "type": "string",
+            "description": "The ISO date time string when the request was uploaded to the server"
+          },
+          "started": {
+            "type": "string",
+            "description": "The ISO date time string when the request began to be processed"
+          },
+          "finished": {
+            "type": "string",
+            "description": "The ISO date time string when the request finished being processed"
+          },
           "message": {
             "type": "string",
             "description": "The message content describing the response"
@@ -543,8 +1046,12 @@
             ],
             "type": "object",
             "properties": {
+              "requestTime": {
+                "type": "string",
+                "description": "The time the request was received by the server in ISO format"
+              },
               "negative": {
-                "type": "array",
+                "type": "string",
                 "description": "The negative image labels"
               },
               "requestId": {
@@ -555,8 +1062,12 @@
                 "type": "integer",
                 "description": "The width of the image"
               },
+              "model": {
+                "type": "string",
+                "description": "The model to use for processing"
+              },
               "positive": {
-                "type": "array",
+                "type": "string",
                 "description": "The positive image labels"
               },
               "type": {
